docs: fix spacing issues

--- a/docs/.vuepress/theme/assets/less/hljs-dialpad.less
+++ b/docs/.vuepress/theme/assets/less/hljs-dialpad.less
@@ -1,5 +1,6 @@
 div[class*=language-] {
   padding: var(--su8);
+  margin: var(--su16) 0;
   border-radius: var(--su8);
   background-color: hsla(var(--black-600-h) var(--black-600-s) var(--black-600-l) ~' / ' var(--bgo));
 
